# microcrypt

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  security_report.md
.github/workflows/: ci.yml  release.yml
cmake/: microcryptConfig.cmake.in
docs/: API.md  CBC_SECURITY.md  COOKBOOK.md  DESIGN.md  FOOTPRINT.md  ISSUES.md  MIGRATION.md  RELEASE.md  SIDE_CHANNELS.md  VERIFICATION.md
include/: mcrypt.h
src/: mcrypt.c
tests/: Makefile  mtest.h  test_all.c
tests/consumer/: CMakeLists.txt  main.c
